--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sendgrid/mail": "^8.1.3",
+    "@vercel/analytics": "^1.4.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
